--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="imagem">
-      <img src="/images/image-qr-code.png" alt="imagem do QR-Code" id="qrcode">
+      <img src="images/image-qr-code.png" alt="imagem do QR-Code" id="qrcode">
       <div class="texto">
         <h2>Improve your front-end skills by building projects</h2>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
